...
        android:id="@+id/nav_main_menu"
        android:name="com.xbcad.xbcad7319_physiotherapyapp.ui.main_menu.MainMenuFragment"
        android:label="Main Menu"
        tools:layout="@layout/fragment_main_menu" >
        <action
            android:id="@+id/action_nav_home_to_nav_login_patient"
            app:destination="@id/nav_login_patient" />
        <action
            android:id="@+id/action_nav_main_menu_to_nav_login_staff"
            app:destination="@id/nav_login_staff" />
        <action
            android:id="@+id/action_nav_main_menu_to_nav_register_patient"
            app:destination="@id/nav_register_patient" />
    </fragment>

    <fragment
        android:id="@+id/nav_login_patient"
        android:name="com.xbcad.xbcad7319_physiotherapyapp.ui.login_patient.LoginPatientFragment"
        android:label="Login - Patient"
...
